# IASW

./: README.md  main.py  pyproject.toml
data/: iasw.db
data/chroma/: chroma.sqlite3
iasw/: requirements.txt
iasw/backend/: main.py
iasw/backend/agents/: address_cross_ref.py  address_doc_processor.py  address_forgery_check.py  address_scorer.py  cross_ref.py  doc_processor.py  forgery_check.py  pipeline.py  scorer.py
iasw/backend/db/: models.py  session.py
iasw/backend/prompts/: address_extraction.txt  address_forgery_check.txt  address_summary.txt  doc_extraction.txt  forgery_check.txt  summary.txt
iasw/backend/services/: filenet.py  ocr.py  otp.py  rps.py
iasw/frontend/: app.py
iasw/frontend/pages/: checker_ui.py  staff_intake.py
iasw/samples/: create_address_proof.py  create_sample.py
